# Kakeiboku

./: .gitignore  docker-compose.yaml  readme.md
backend/: Cargo.toml  Makefile.example
backend/docs/: business-002.md  business-003.md  bussines-001.md  reverence.md
backend/migrations/: 0001_init_table.down.sql  0001_init_table.up.sql  0003_seed_data.down.sql  0003_seed_data.up.sql  0004_nullable_to_basket.down.sql  0004_nullable_to_basket.up.sql
backend/src/: main.rs
backend/src/configs/: app_config.rs  mod.rs  open_api.rs
backend/src/dtos/: auth_dto.rs  basket_dot.rs  basket_dto.rs  common_dto.rs  dashboard_dto.rs  mod.rs  transaction_dto.rs  user_dto.rs
backend/src/handlers/: auth_handler.rs  basket_handler.rs  basket_transaction_handle.rs  common_handler.rs  dashboard_handler.rs  mod.rs  transaction_handler.rs  user_basket_handler.rs  user_handlers.rs  user_transaction_handler.rs
backend/src/middlewares/: logger_middleware.rs  mod.rs
backend/src/models/: baskets.rs  baskets_category.rs  mod.rs  transactions.rs  transactions_detail.rs  transactions_type.rs  user.rs  users.rs
backend/src/repositories/: basket_category_repository.rs  basket_repository.rs  dashboard_repository.rs  mod.rs  transaction_detail_repository.rs  transaction_repository.rs  transaction_type_repository.rs  user_repository.rs
backend/src/routes/: auth_routes.rs  basket_routes.rs  mod.rs  swagger_router.rs  transaction_routes.rs  user_router.rs  user_routes.rs
backend/src/services/: auth_service.rs  basket_service.rs  common_service.rs  dashboard_service.rs  mod.rs  transaction_service.rs  user_service.rs
backend/src/utils/: hash_util.rs  jwt_util.rs  mod.rs  test_setup_util.rs
backend/tracing-subscriber/: Cargo.toml
frontend/: .env.example  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/components/: AllocateForm.vue  BasketItem.vue  ColorModeToggle.vue  CreateBasketForm.vue  CreateTransactionForm.vue  DashboardNavbar.vue  DashboardSidebar.vue  DashboardStatCard.vue  DepositForm.vue  SpendForm.vue  TransactionItem.vue
frontend/app/composables/: useAuth.ts  useBaskets.ts  useCommonData.ts  useDashboard.ts  useTransactions.ts
(+86 files in other folders)
