[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate"] } 
tokio = { version= "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url            = "2.5"