[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum                = { version =  "0.8.8", features = ["json", "form"] }
anyhow = "1.0.102"
async-trait = "0.1"
axum-extra = { version = "0.9", features = ["typed-header"] }
dotenvy = "0.15.7"
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate","chrono"] } 
tokio = { version= "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url            = "2.5"
utoipa = { version="5.4.0", features=["axum_extras"]}
utoipa-axum = "0.2.0"
utoipa-swagger-ui = {version = "9.0.2", features=["axum"]}
serde               = { version =  "1.0.228", features = ["derive"] }
jsonwebtoken        = "10.3.0"
chrono              = { version = "0.4", features = ["serde"] }
argon2              = "0.5"           # password hashing
tower-http          = { version = "0.5", features = ["trace", "cors"] }
thiserror           = "2.0.18"
headers = "0.4.1"
